--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -13,3 +13,7 @@ en:
         contact:
           title: "Salesforce Contact"
           text: "Contact"
+    topic:
+      actions:
+        create_salesforce_case: "Create Case"
+        sync_salesforce_case: "Sync Case"
