FEATURE: create & sync Salesforce cases from Discoure topics. (#4)
Also, move the leads & contacts creation button inside the post admin menu.

Co-authored-by: David Taylor <david@taylorhq.com>
Co-authored-by: Alan Guo Xiang Tan <gxtan1990@gmail.com>

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1,6 +1,7 @@
 en:
   js:
     salesforce:
+      title: Salesforce
       lead:
         create: "Create Lead"
       contact:
@@ -12,3 +13,7 @@ en:
         contact:
           title: "Salesforce Contact"
           text: "Contact"
+    topic:
+      actions:
+        create_salesforce_case: "Create Case"
+        sync_salesforce_case: "Sync Case"
