--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -5,10 +5,12 @@ en:
     salesforce_client_id: "Salesforce connected app's client id"
     salesforce_client_secret: "Salesforce connected app's client secret"
     salesforce_username: "Salesforce account username"
-    salesforce_password: "Salesforce account password"
+    salesforce_max_feed_items_per_day: "Maximum number topic replies which can be posted as feed items on Salesforce objects (Case/Lead/Contact) per day"
     errors:
       salesforce_client_credentials_required: "Salesforce client id and client secret settings are required"
   salesforce:
     error:
       invalid_response: "Invalid response from Salesforce API"
-
+  dashboard:
+    salesforce:
+      app_not_approved: "The Discourse connected app is not yet authorized in Salesforce by the user mentioned in site setting `salesforce_username`. Please follow <a href='%{base_url}/salesforce/admin/authorize'>this link</a> to authorize it."
