FIX: Use translations for login button

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1,5 +1,9 @@
 en:
   js:
+    login:
+      salesforce:
+        name: "Salesforce"
+        title: "Login with Salesforce"
     salesforce:
       title: Salesforce
       lead:
